try to add load img

--- a/server/ResourceServer/ResourceServer.vcxproj
+++ b/server/ResourceServer/ResourceServer.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="AsioIOServicePool.cpp" />
     <ClCompile Include="base64.cpp" />
+    <ClCompile Include="ChatServerGrpcClient.cpp" />
     <ClCompile Include="ConfigMgr.cpp" />
     <ClCompile Include="CServer.cpp" />
     <ClCompile Include="CSession.cpp" />
@@ -163,10 +164,12 @@
   <ItemGroup>
     <ClInclude Include="AsioIOServicePool.h" />
     <ClInclude Include="base64.h" />
+    <ClInclude Include="ChatServerGrpcClient.h" />
     <ClInclude Include="ConfigMgr.h" />
     <ClInclude Include="const.h" />
     <ClInclude Include="CServer.h" />
     <ClInclude Include="CSession.h" />
+    <ClInclude Include="data.h" />
     <ClInclude Include="DistLock.h" />
     <ClInclude Include="FileInfo.h" />
     <ClInclude Include="FileSystem.h" />
